typing text is not visible on small screens - fixed

--- a/app/css/mobile_media.css
+++ b/app/css/mobile_media.css
@@ -13,7 +13,7 @@
   }
 
   .home-banner .label-1 {
-    font-size: 32px;
+    font-size: 21px;
     font-weight: 600;
   }
 
